--- a/Session8_Assignment/Readme
+++ b/Session8_Assignment/Readme
@@ -1,1 +1,10 @@
+## Session 8 Assignment - Team Submission
+Team Members
+1. S.A.Ezhirko
+2. Naga Pavan Kumar Kalepu
+**********************************************************************************************************************
+### Executing RESNET18 model on CIFAR10 dataset
 
+Description:  <br />
+
+* Extracted the ResNet18 model from https://github.com/kuangliu/pytorch-cifar/blob/master/models/resnet.py repository and placed it in our repository model folder https://github.com/eva5covergence/EVA5_AI_Projects_new/tree/master/models/networks
